sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: ')' expected but ',' found.
    for (j<- i, n-2)
              ^AlgSelectionSort:13: error: illegal start of simple expression
  }
  ^